Updated profile pic.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nina's Corner
 description: Rants about statistics, coding, and social psychology
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/ninagial
+avatar: https://avatars1.githubusercontent.com/u/76437397?s=60&v=4
 
 #
 # Flags below are optional
